# occlusion_detector

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: baseline.yaml  data.yaml
data/labels/: ch0.csv  ch1.csv
src/clotting/: __init__.py  config.py
src/clotting/data/: dataset.py
src/clotting/eval/: demo.py  metrics.py  onset.py  plot_signal.py
src/clotting/infer/: predict.py  roi.py
src/clotting/io/: extract.py
src/clotting/models/: encoder.py
src/clotting/train/: classify.py
