[project]
name = "clotting"
version = "0.1.0"
description = "Occlusion-onset detector for microfluidic thrombosis video"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "opencv-python-headless",
    "numpy",
    "pyyaml",
    "tqdm",
    "scikit-learn",
    "torch",
    "torchvision",
    "timm",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
